<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_behaviour="@string/appbar_scrolling_view_behaviour">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textview_web_url"
                android:text="@string/web_url"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                app:layout_constraintBaseline_toBaselineOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/input_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/https_www_google_com"
                app:layout_constraintBaseline_toBaselineOf="@id/textview_web_url"
                app:layout_constraintEnd_toStartOf="@+id/button_browse"
                app:layout_constraintStart_toEndOf="@+id/textview_web_url"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor,TextFields"
                android:autofillHints="" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_browse"
                android:text="@string/browse"
                app:layout_constraintStart_toEndOf="@id/input_url"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/input_url"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_phone_no"
                android:text="@string/phone_no"
                android:textSize="18sp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/textview_web_url"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/input_phone_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/alarm"
                android:inputType="phone"
                android:minHeight="48dp"
                app:layout_constraintBaseline_toBaselineOf="@id/textview_phone_no"
                app:layout_constraintEnd_toStartOf="@id/button_call"
                app:layout_constraintStart_toEndOf="@+id/textview_phone_no"
                tools:ignore="DuplicateSpeakableTextCheck"
                android:autofillHints="" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_call"
                android:text="@string/call"
                app:layout_constraintStart_toEndOf="@id/input_phone_no"
                app:layout_constraintEnd_toEndOf="@id/button_browse"
                app:layout_constraintBaseline_toBaselineOf="@id/textview_phone_no"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_call_log"
                android:text="@string/Call_log"
                android:textSize="18sp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_phone_no"/>

            <Button
                android:id="@+id/button_call_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_log"
                app:layout_constraintBaseline_toBaselineOf="@id/textview_call_log"
                app:layout_constraintBottom_toBottomOf="@id/button_call"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_gallery"
                android:text="@string/Gallery"
                android:textSize="18sp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_call_log"/>

            <Button
                android:id="@+id/button_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                app:layout_constraintBaseline_toBaselineOf="@id/textview_gallery"
                app:layout_constraintBottom_toBottomOf="@id/button_call_log"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_camera"
                android:text="@string/Camera"
                android:textSize="18sp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_gallery"/>

            <Button
                android:id="@+id/button_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                app:layout_constraintBaseline_toBaselineOf="@id/textview_camera"
                app:layout_constraintBottom_toBottomOf="@id/button_gallery"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_alarm"
                android:text="@string/aLarm"
                android:textSize="18sp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_camera"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_alarm"
                android:text="@string/alarm"
                app:layout_constraintBottom_toBottomOf="@id/button_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/textview_alarm"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>